--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.2",
+    "clsx": "^2.1.1",
     "firebase": "^11.2.0",
+    "framer-motion": "^12.0.6",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.474.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^7.1.5",
     "sort-by": "^0.0.2",
-    "tailwindcss": "^4.0.2"
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
